--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "php.executablePath": "PHP 7 + executable",
-    "npm.exclude": ""
+    "npm.exclude": "",
+    "cSpell.words": [
+        "currentdate"
+    ]
 }
