--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "npm.exclude": "",
     "cSpell.words": [
         "currentdate",
+        "encabezado",
+        "heig",
+        "heigth",
         "mistdrizzle"
     ]
 }
