--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "php.executablePath": "PHP 7 + executable",
     "npm.exclude": "",
     "cSpell.words": [
+        "contenedor",
         "currentdate",
         "encabezado",
         "heig",
         "heigth",
-        "mistdrizzle"
+        "mistdrizzle",
+        "mostrar"
     ]
 }
