--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,12 @@
         "focusring",
         "heig",
         "heigth",
+        "hide",
         "mistdrizzle",
         "mostrar",
+        "nav",
         "necolas",
-        "titulo"
+        "titulo",
+        "ul"
     ]
 }
