--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,23 @@
     "php.executablePath": "PHP 7 + executable",
     "npm.exclude": "",
     "cSpell.words": [
+        "articulo",
+        "bf",
         "ciudad",
+        "clima",
+        "contacto",
         "contenedor",
+        "corrupti",
         "currentdate",
         "encabezado",
+        "facilis",
         "focusring",
         "heig",
         "heigth",
         "hide",
+        "incidunt",
+        "magni",
+        "mapa",
         "mistdrizzle",
         "mostrar",
         "nav",
