--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,19 @@
     "php.executablePath": "PHP 7 + executable",
     "npm.exclude": "",
     "cSpell.words": [
+        "adipisicing",
+        "amet",
         "articulo",
         "bf",
         "ciudad",
         "clima",
+        "consectetur",
         "contacto",
         "contenedor",
         "corrupti",
         "currentdate",
+        "eius",
+        "elit",
         "encabezado",
         "facilis",
         "focusring",
@@ -17,6 +22,8 @@
         "heigth",
         "hide",
         "incidunt",
+        "labore",
+        "magnam",
         "magni",
         "mapa",
         "mistdrizzle",
@@ -24,6 +31,8 @@
         "nav",
         "necolas",
         "parrafo",
+        "soluta",
+        "sunt",
         "titulo",
         "ul"
     ]
