--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "nav",
         "necolas",
         "parrafo",
+        "sleepinornot",
         "soluta",
         "sunt",
         "titulo",
