--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,10 +22,12 @@
         "heigth",
         "hide",
         "incidunt",
+        "jaboticabal",
         "labore",
         "magnam",
         "magni",
         "mapa",
+        "midael",
         "mistdrizzle",
         "mostrar",
         "nav",
