--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "amet",
         "articulo",
         "bf",
+        "cadena",
         "ciudad",
         "clima",
         "consectetur",
@@ -17,6 +18,7 @@
         "elit",
         "encabezado",
         "facilis",
+        "fecha",
         "focusring",
         "heig",
         "heigth",
@@ -24,6 +26,7 @@
         "incidunt",
         "jaboticabal",
         "labore",
+        "lastmodification",
         "magnam",
         "magni",
         "mapa",
@@ -33,6 +36,7 @@
         "nav",
         "necolas",
         "parrafo",
+        "retornar",
         "sleepinornot",
         "soluta",
         "sunt",
