--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "php.executablePath": "PHP 7 + executable",
     "npm.exclude": "",
     "cSpell.words": [
+        "actisat",
         "adipisicing",
         "amet",
         "articulo",
