--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,14 @@
         "articulo",
         "bf",
         "cadena",
+        "cinco",
         "ciudad",
         "clima",
         "consectetur",
         "contacto",
         "contenedor",
         "corrupti",
+        "cuatro",
         "currentdate",
         "eius",
         "elit",
