--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "incidunt",
         "jaboticabal",
         "labore",
+        "last",
         "lastmodification",
         "magnam",
         "magni",
