--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "focusring",
         "heig",
         "heigth",
+        "herosum",
         "hide",
         "incidunt",
         "jaboticabal",
