--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,9 @@
         "nav",
         "necolas",
         "parrafo",
+        "prestonlarge",
+        "prestonlesson",
+        "prestonmedium",
         "retornar",
         "sleepinornot",
         "soluta",
