--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,11 +22,14 @@
         "encabezado",
         "facilis",
         "fecha",
+        "figcaution",
         "focusring",
+        "galeria",
         "heig",
         "heigth",
         "herosum",
         "hide",
+        "imagen",
         "incidunt",
         "jaboticabal",
         "labore",
