--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "adipisicing",
         "amet",
         "articulo",
+        "b",
         "bf",
         "cadena",
         "cinco",
@@ -47,12 +48,14 @@
         "prestonlarge",
         "prestonlesson",
         "prestonmedium",
+        "rauls",
         "retornar",
         "sleepinornot",
         "soluta",
         "sunt",
         "titulo",
-        "ul"
+        "ul",
+        "wildwest"
     ],
     "editor.linkedEditing": true
 }
