--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,12 @@
         "articulo",
         "b",
         "bf",
+        "browserlist",
         "cadena",
         "cinco",
         "ciudad",
         "clima",
+        "codep",
         "consectetur",
         "contacto",
         "contenedor",
@@ -24,6 +26,7 @@
         "facilis",
         "fecha",
         "figcaution",
+        "firts",
         "focusring",
         "galeria",
         "heig",
@@ -42,17 +45,21 @@
         "midael",
         "mistdrizzle",
         "mostrar",
+        "mozila",
         "nav",
         "necolas",
         "parrafo",
+        "postal",
         "prestonlarge",
         "prestonlesson",
         "prestonmedium",
+        "ratingvalue",
         "rauls",
         "retornar",
         "sleepinornot",
         "soluta",
         "sunt",
+        "tickmarks",
         "titulo",
         "ul",
         "wildwest"
