--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,10 +23,13 @@
         "eius",
         "elit",
         "encabezado",
+        "enviar",
         "facilis",
         "fecha",
         "figcaution",
         "firts",
+        "fishhaven",
+        "flexly",
         "focusring",
         "galeria",
         "heig",
@@ -43,6 +46,8 @@
         "magni",
         "mapa",
         "midael",
+        "minimun",
+        "minlength",
         "mistdrizzle",
         "mostrar",
         "mozila",
@@ -57,11 +62,13 @@
         "rauls",
         "retornar",
         "sleepinornot",
+        "sodasprings",
         "soluta",
         "sunt",
         "tickmarks",
         "titulo",
         "ul",
+        "unico",
         "wildwest"
     ],
     "editor.linkedEditing": true
