--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "labore",
         "last",
         "lastmodification",
+        "lastname",
         "magnam",
         "magni",
         "mapa",
