--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "christian-kohler.npm-intellisense"
+        "christian-kohler.npm-intellisense",
+        "formulahendry.auto-rename-tag"
     ]
 }
