--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "herosum",
         "hide",
         "imagen",
+        "imageurl",
         "incidunt",
         "jaboticabal",
         "labore",
