--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "mozila",
         "nav",
         "necolas",
+        "numofchildren",
         "parrafo",
         "postal",
         "prestonlarge",
