--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "adipisicing",
         "amet",
         "articulo",
+        "assigment",
         "b",
         "bf",
         "birthdate",
