--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,8 @@
         "titulo",
         "ul",
         "unico",
-        "wildwest"
+        "wildwest",
+        "yearfounded"
     ],
     "editor.linkedEditing": true
 }
