--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "flexly",
         "focusring",
         "galeria",
+        "haven",
         "heig",
         "heigth",
         "herosum",
@@ -58,6 +59,8 @@
         "nav",
         "necolas",
         "numofchildren",
+        "october",
+        "octoberfest",
         "parrafo",
         "postal",
         "prestonlarge",
@@ -69,6 +72,7 @@
         "sleepinornot",
         "sodasprings",
         "soluta",
+        "springs",
         "sunt",
         "tickmarks",
         "titulo",
