--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "corrupti",
         "cuatro",
         "currentdate",
+        "derecha",
         "eius",
         "elit",
         "encabezado",
