--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,8 @@
         "heigth",
         "herosum",
         "hide",
+        "hopag",
+        "hopage",
         "imagen",
         "imageurl",
         "incidunt",
