--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "ul",
         "unico",
         "wildwest",
+        "wireframe",
         "yearfounded"
     ],
     "editor.linkedEditing": true
