--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "hopag",
         "hopage",
         "imagen",
+        "imagesrc",
         "imageurl",
         "incidunt",
         "jaboticabal",
