--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,7 @@
         "sleepinornot",
         "sodasprings",
         "soluta",
+        "speed",
         "springs",
         "sunt",
         "tickmarks",
