--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "actisat",
         "adipisicing",
         "amet",
+        "apiforest",
         "articulo",
         "assigment",
         "b",
@@ -12,6 +13,7 @@
         "birthdate",
         "browserlist",
         "cadena",
+        "chill",
         "cinco",
         "ciudad",
         "clima",
@@ -83,6 +85,7 @@
         "titulo",
         "ul",
         "unico",
+        "url",
         "wildwest",
         "wireframe",
         "yearfounded"
