--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "actisat",
         "adipisicing",
         "amet",
+        "apiforecast",
         "apiforest",
         "articulo",
         "assigment",
@@ -83,6 +84,7 @@
         "sunt",
         "tickmarks",
         "titulo",
+        "tolocale",
         "ul",
         "unico",
         "url",
