--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "prestonlarge",
         "prestonlesson",
         "prestonmedium",
+        "prueba",
         "ratingvalue",
         "rauls",
         "retornar",
