--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,7 +37,9 @@
         "fishhaven",
         "flexly",
         "focusring",
+        "forescast",
         "galeria",
+        "get",
         "haven",
         "heig",
         "heigth",
