--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "corrupti",
         "cuatro",
         "currentdate",
+        "dayofweek",
         "derecha",
         "eius",
         "elit",
