--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
         "soluta",
         "speed",
         "springs",
+        "sprinnfiel",
         "sunt",
         "tickmarks",
         "titulo",
