--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,7 +81,9 @@
         "rauls",
         "retornar",
         "sleepinornot",
+        "sodaspringlarge",
         "sodasprings",
+        "sodaspringsmedium",
         "soluta",
         "speed",
         "springs",
