--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
         "figcaution",
         "firts",
         "fishhaven",
+        "fishhavenlarge",
+        "fishhavenmedium",
         "flexly",
         "focusring",
         "forescast",
