--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,8 @@
         "rauls",
         "retornar",
         "sleepinornot",
+        "sodacity",
+        "sodalarge",
         "sodaspringlarge",
         "sodasprings",
         "sodaspringsmedium",
