--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,9 +93,11 @@
         "springs",
         "sprinnfiel",
         "sunt",
+        "threep",
         "tickmarks",
         "titulo",
         "tolocale",
+        "twop",
         "ul",
         "unico",
         "url",
