--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
         "ratingvalue",
         "rauls",
         "retornar",
+        "return",
         "sleepinornot",
         "sodacity",
         "sodalarge",
