--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
         "url",
         "wildwest",
         "wireframe",
+        "wireframes",
         "yearfounded"
     ],
     "editor.linkedEditing": true
