--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,9 +29,11 @@
         "derecha",
         "eius",
         "elit",
+        "empresa",
         "encabezado",
         "enviar",
         "facilis",
+        "february",
         "fecha",
         "figcaution",
         "firts",
@@ -55,6 +57,7 @@
         "imageurl",
         "incidunt",
         "jaboticabal",
+        "january",
         "labore",
         "last",
         "lastmodification",
