--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "birthdate",
         "browserlist",
         "cadena",
+        "cambio",
         "chill",
         "cinco",
         "ciudad",
