--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "articulo",
         "assigment",
         "b",
+        "barqto",
         "bf",
         "birthdate",
         "browserlist",
