--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "articulo",
         "assigment",
         "b",
+        "barqf",
         "barqto",
         "bf",
         "birthdate",
@@ -67,6 +68,7 @@
         "magnam",
         "magni",
         "mapa",
+        "mercabar",
         "midael",
         "minimun",
         "minlength",
@@ -107,6 +109,8 @@
         "ul",
         "unico",
         "url",
+        "vaca",
+        "vacap",
         "wildwest",
         "wireframe",
         "wireframes",
