--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
         "tickmarks",
         "titulo",
         "tolocale",
+        "traer",
         "twop",
         "ul",
         "unico",
