--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "corrupti",
         "cuatro",
         "currentdate",
+        "currentday",
         "dayofweek",
         "derecha",
         "eius",
