--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "clima",
         "codep",
         "consectetur",
+        "contactinfo",
         "contacto",
         "contenedor",
         "corrupti",
