--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "browserlist",
         "cadena",
         "cambio",
+        "chammber",
         "chill",
         "cinco",
         "ciudad",
