--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,5 +120,6 @@
         "wireframes",
         "yearfounded"
     ],
-    "editor.linkedEditing": true
+    "editor.linkedEditing": true,
+    "liveServer.settings.port": 5501
 }
